# obs-virtual-cam-filter

./: CMakeLists.txt  README.md  installer.iss.in  virtual-cam-filter.c  virtual-cam-filter.h
.github/workflows/: build.yml
CI/macos/: virtual-cam-filter.pkgproj
data/locale/: de-DE.ini  en-US.ini
